# Coder5543

./: .env.example  .eslintrc.json  .geminiignore  .gitignore  .gitmodules  .projscanrc.json  AGENT_RECORD.md  AI_ASSETS_REGISTRY.md  ARCHITECTURE_REPORT.md  EditorPanel.tsx  GEMINI.md  HANDOVER.md  NodeBridgePanel.tsx  README.md  SKILL.md  ToolNeuronPanel.tsx  algorithms_knowledge_pack.json  ask_sage.py  check_console.cjs  check_console.js  check_console2.js  check_tailwind.js  check_visibility.js  components.txt  debug_rects.js  debug_render.js  diag_live.cjs  diagnostic.js  diagnostic_404.js  diagnostic_connect.js  diagnostic_firefox.js  diagnostic_fixed.js  doctor_report.json  dump_dom.js  extract_skills.py  extract_supercoder_personalities.py  fibonacci_vfs_v73.py  final_doctor_report.json  full_analyze_report.json  full_doctor_report.json  (+32 more)
.claude/: plan.md
.projscan-memory/: memory.json
.serena/: project.yml
ARGUS/: CLAUDE_REPORT.md  UI_ANALYSIS.md  build-standalone.mjs  index.html  package.json  stormologist-daemon.js  tailwind.config.ts  vite.config.ts
assets/: index-CdxXPu_B.js  index-DNeYY9GU.js  index-DYkR6ds6.css  index-wiVjRFte.css  vendor-ai-nQIKaGtM.js  vendor-ai-wssDUia_.js  vendor-monaco-ChYIzc51.js  vendor-monaco-Y8mdJUZx.js  vendor-react-BTEzUGtv.js  vendor-react-CpQaE0NB.js  vendor-ui-BcaOoVGz.js  vendor-ui-Dew6HpGH.js
brain/: associativeLayer.ts  ltmStore.ts  painErrorPathway.ts  storage.ts  types.ts
coder_b/: Brain.py.txt  Coding.txt  codeinventory.json
components/: FileTree.tsx
core_identity/: MEMORY.md  SageGenome_v4.0.kt  (+1 more)
(+631 files in other folders)
